--- a/templates/auth/index.html
+++ b/templates/auth/index.html
@@ -5,13 +5,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-  <meta name="description" content="Metro Admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
-  <meta name="keywords" content="admin template, Metro Admin template, dashboard template, flat admin template, responsive admin template, web app">
-  <meta name="author" content="Metro">
   <title>Login | Chikolo</title>
   <link rel="apple-touch-icon" href="{% static 'images/ico/apple-icon-120.png' %}">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i"
-  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'css/vendors.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/icheck/icheck.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/icheck/custom.css' %}">
@@ -19,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/pages/login-register.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
+
 </head>
 <body class="vertical-layout vertical-menu 1-column bg-lighten-2 menu-expanded blank-page blank-page" data-open="click" data-menu="vertical-menu" data-col="1-column">
   <div class="app-content content">
@@ -58,7 +55,7 @@
                             <label for="remember-me"> Remember Me</label>
                           </fieldset>
                         </div>
-                        <div class="col-md-6 col-12 float-sm-left text-center text-sm-right"><a href="{% url 'auth_forgotpassword' %}" class="card-link">Forgot Password?</a></div>
+                        <div class="col-md-6 col-12 float-sm-left text-center text-sm-right"><a href="{% url 'auth_forgot_password' %}" class="card-link">Forgot Password?</a></div>
                       </div>
                       <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i> Login</button>
                     </form>
