--- a/templates/auth/setPassword.html
+++ b/templates/auth/setPassword.html
@@ -1,7 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html class="loading" lang="en" data-textdirection="ltr">
-
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,8 +15,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/pages/login-register.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/validation/form-validation.css' %}">
 </head>
-
 <body class="vertical-layout vertical-menu 1-column bg-lighten-2 menu-expanded blank-page blank-page" data-open="click"
     data-menu="vertical-menu" data-col="1-column">
     <div class="app-content content">
@@ -36,23 +35,43 @@
                                         </div>
                                     </div>
                                     <h6 class="card-subtitle line-on-side text-muted text-center font-small-3 pt-2">
-                                        <span>Request Password Reset</span>
+                                        <span>Change Password Reset</span>
                                     </h6>
                                 </div>
                                 <div class="card-content">
 
                                     <div class="card-body pt-0">
-                                        <form class="form-horizontal"
-                                            action="http://wordpressbusiness.top/admin02/html/ltr/vertical-menu-template-light/index.html">
-                                            <fieldset class="form-group floating-label-form-group">
-                                                <label for="user-name">Email</label>
-                                                <input type="text" class="form-control" id="user-name"
-                                                    placeholder="Email">
-                                            </fieldset>
-                                            <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i> Reset</button>
+                                        <form class="form-horizontal">
+                                            <div class="form-group ">
+                                                <label>Password
+                                                    <span class="required">*</span>
+                                                </label>
+                                                <div class="controls position-relative has-icon-left">
+                                                    <input type="password" name="password" id="password" placeholder="Password" class="form-control" required
+                                                        data-validation-required-message="Password is required" minlength="12"
+                                                        data-validation-regex-regex="(?=.*[@#$!%?])(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d@#$!%?]{8,}$"
+                                                        data-validation-regex-message="Password must be alphanumeric<br/>12 - 20 characters (special char are allowed)">
+                                                    <div class="form-control-position">
+                                                        <i class="ft-lock primary"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Repeat Password
+                                                    <span class="required">*</span>
+                                                </label>
+                                                <div class="controls position-relative has-icon-left">
+                                                    <input type="password" name="password2" placeholder="Repeat Password" data-validation-match-match="password"
+                                                        class="form-control" required data-validation-required-message="Password is required">
+                                                    <div class="form-control-position">
+                                                        <i class="ft-lock primary"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button type="submit" class="btn btn-outline-primary btn-block"><i
+                                                    class="ft-unlock"></i> Change Password</button>
                                         </form>
                                     </div>
-                                    <p class="text-center"> <a href="{% url 'auth_login' %}" class="card-link">Login</a></p>
                                 </div>
                             </div>
                         </div>
@@ -67,6 +86,11 @@
     <script src="{% static 'js/core/app.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/customizer.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/form-login-register.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/forms/validation/jqBootstrapValidation.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/scripts/forms/validation/form-validation.js' %}" type="text/javascript"></script>
+    <script>
+        var csrftoken = '{{ csrf_token }}';
+    </script>
 </body>
 
 </html>
