Added Login method

--- a/templates/auth/index.html
+++ b/templates/auth/index.html
@@ -39,7 +39,7 @@
                 <div class="card-content">
                  
                   <div class="card-body pt-0">
-                    <form class="form-horizontal" action="http://wordpressbusiness.top/admin02/html/ltr/vertical-menu-template-light/index.html">
+                    <form class="form-horizontal">
                       <fieldset class="form-group floating-label-form-group">
                         <label for="user-name">Username/Email</label>
                         <input type="text" class="form-control" id="user-name" placeholder="Username/Email">
