--- a/templates/auth/index.html
+++ b/templates/auth/index.html
@@ -40,24 +40,34 @@
                  
                   <div class="card-body pt-0">
                     <form class="form-horizontal">
-                      <fieldset class="form-group floating-label-form-group">
-                        <label for="user-name">Username/Email</label>
-                        <input type="text" class="form-control" id="user-name" placeholder="Username/Email">
-                      </fieldset>
-                      <fieldset class="form-group floating-label-form-group mb-1">
-                        <label for="user-password">Password</label>
-                        <input type="password" class="form-control" id="user-password" placeholder="Enter Password">
-                      </fieldset>
-                      <div class="form-group row">
-                        <div class="col-md-6 col-12 text-center text-sm-left">
-                          <fieldset>
-                            <input type="checkbox" id="remember-me" class="chk-remember">
-                            <label for="remember-me"> Remember Me</label>
-                          </fieldset>
+                      <div id="login">
+                        <fieldset class="form-group floating-label-form-group">
+                          <label for="user-name">Username/Email</label>
+                          <input type="text" class="form-control" id="user-name" placeholder="Username/Email">
+                        </fieldset>
+                        <fieldset class="form-group floating-label-form-group mb-1">
+                          <label for="user-password">Password</label>
+                          <input type="password" class="form-control" id="user-password" placeholder="Enter Password">
+                        </fieldset>
+                        <div class="form-group row">
+                          <div class="col-md-6 col-12 text-center text-sm-left">
+                            <fieldset>
+                              <input type="checkbox" id="remember-me" class="chk-remember">
+                              <label for="remember-me"> Remember Me</label>
+                            </fieldset>
+                          </div>
+                          <div class="col-md-6 col-12 float-sm-left text-center text-sm-right"><a href="{% url 'auth_two_fa' %}"
+                              class="card-link">Forgot Password?</a></div>
                         </div>
-                        <div class="col-md-6 col-12 float-sm-left text-center text-sm-right"><a href="{% url 'auth_forgot_password' %}" class="card-link">Forgot Password?</a></div>
+                        <button type="button" onclick="ShowHideDiv(this)" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i> Login</button>
                       </div>
-                      <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i> Login</button>
+                      <div id="2fa" style="display: none;">
+                        <fieldset class="form-group floating-label-form-group">
+                          <label for="user-name">Code</label>
+                          <input type="text" class="form-control" id="user-name" placeholder="Code">
+                        </fieldset>
+                        <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i> Proceed</button>
+                      </div>
                     </form>
                   </div>
                 </div>
@@ -74,5 +84,20 @@
   <script src="{% static 'js/core/app.js' %}" type="text/javascript"></script>
   <script src="{% static 'js/scripts/customizer.js' %}" type="text/javascript"></script>
   <script src="{% static 'js/scripts/forms/form-login-register.js' %}" type="text/javascript"></script>
+  <script>
+      function ShowHideDiv(btnPassport) {
+        var loginDIV = document.getElementById("login");
+        var TwofaDIV = document.getElementById("2fa");
+        loginDIV.style.display = "none";
+        TwofaDIV.style.display = "block";
+        // if (btnPassport.value == "Yes") {
+          
+        //   btnPassport.value = "No";
+        // } else {
+          
+        //   btnPassport.value = "Yes";
+        // }
+      }
+  </script>
 </body>
 </html>
