--- a/templates/auth/index.html
+++ b/templates/auth/index.html
@@ -54,7 +54,7 @@
                               <label for="remember-me"> Remember Me</label>
                             </fieldset>
                           </div>
-                          <div class="col-md-6 col-12 float-sm-left text-center text-sm-right"><a href="{% url 'auth_two_fa' %}"
+                          <div class="col-md-6 col-12 float-sm-left text-center text-sm-right"><a href="{% url 'auth_forgot_password' %}"
                               class="card-link">Forgot Password?</a></div>
                         </div>
                         <button type="button" onclick="ShowHideDiv(this)" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i>
@@ -77,7 +77,7 @@
   <script src="{% static 'js/scripts/forms/form-login-register.js' %}" type="text/javascript"></script>
   <script>
     function ShowHideDiv(btnPassport) {
-      location.href="{% url 'auth_two_fa' %}";
+      location.href="{% url 'admin_home' %}";
     }
   </script>
 </body>
