Two Factor Authentication done

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,31 +5,20 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Analytics Dashboard - Stack Responsive Bootstrap 4 Admin Template</title>
+    <title>Chikolo</title>
     <link rel="apple-touch-icon" href="{% static 'images/ico/apple-icon-120.png' %}">
-    <link rel="shortcut icon" type="image/x-icon"
-        href="http://wordpressbusiness.top/admin02/app-assets/images/ico/favicon.ico">
-    <link
-        href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i"
-        rel="stylesheet">
-    <!-- BEGIN VENDOR CSS-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/vendors.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/charts/jquery-jvectormap-2.0.3.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/charts/morris.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/extensions/unslider.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/weather-icons/climacons.min.css' %}">
-    <!-- END VENDOR CSS-->
-    <!-- BEGIN STACK CSS-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
-    <!-- END STACK CSS-->
-    <!-- BEGIN Page Level CSS-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
-
 </head>
 
 <body class="vertical-layout vertical-menu 2-columns   menu-expanded fixed-navbar" data-open="click"
     data-menu="vertical-menu" data-col="2-columns">
-    <!-- fixed-top-->
     <nav class="header-navbar navbar-expand-md navbar navbar-with-menu fixed-top navbar-light navbar-border">
         <div class="navbar-wrapper">
             <div class="navbar-header">
