--- a/templates/auth/index.html
+++ b/templates/auth/index.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/pages/login-register.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
 
 </head>
 <body class="vertical-layout vertical-menu 1-column bg-lighten-2 menu-expanded blank-page blank-page" data-open="click" data-menu="vertical-menu" data-col="1-column">
@@ -35,29 +34,35 @@
                   <h6 class="card-subtitle line-on-side text-muted text-center font-small-3 pt-2">
                     <span>Log in to get going</span>
                   </h6>
+                  <div class="alert alert-icon-left alert-info alert-dismissible mb-2" role="alert" id="notify" style="display: none;">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                    <strong id="heading"></strong> <span id="msg"></span>
+                  </div>
                 </div>
                 <div class="card-content">                
                   <div class="card-body pt-0">
-                    <form class="form-horizontal">
+                    <form class="form-horizontal" id="login" novalidate>
                         <fieldset class="form-group floating-label-form-group">
-                          <label for="user-name">Username/Email</label>
-                          <input type="text" class="form-control" id="user-name" placeholder="Username/Email">
+                          <label for="email">Username/Email</label>
+                          <input type="text" class="form-control" id="email" placeholder="Username/Email">
                         </fieldset>
                         <fieldset class="form-group floating-label-form-group mb-1">
                           <label for="user-password">Password</label>
-                          <input type="password" class="form-control" id="user-password" placeholder="Enter Password">
+                          <input type="password" class="form-control" id="password" placeholder="Enter Password">
                         </fieldset>
                         <div class="form-group row">
                           <div class="col-md-6 col-12 text-center text-sm-left">
                             <fieldset>
-                              <input type="checkbox" id="remember-me" class="chk-remember">
+                              <input type="checkbox" id="remember_me" class="chk-remember">
                               <label for="remember-me"> Remember Me</label>
                             </fieldset>
                           </div>
                           <div class="col-md-6 col-12 float-sm-left text-center text-sm-right"><a href="{% url 'auth_forgot_password' %}"
                               class="card-link">Forgot Password?</a></div>
                         </div>
-                        <button type="button" onclick="ShowHideDiv(this)" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i>
+                        <button type="submit" id="loginBTN" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i>
                           Login</button>
                     </form>
                   </div>
@@ -73,12 +78,13 @@
   <script src="{% static 'vendors/js/forms/icheck/icheck.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'js/core/app-menu.js' %}" type="text/javascript"></script>
   <script src="{% static 'js/core/app.js' %}" type="text/javascript"></script>
-  <script src="{% static 'js/scripts/customizer.js' %}" type="text/javascript"></script>
   <script src="{% static 'js/scripts/forms/form-login-register.js' %}" type="text/javascript"></script>
+  <script src="{% static 'vendors/js/forms/validation/jqBootstrapValidation.js' %}" type="text/javascript"></script>
   <script>
-    function ShowHideDiv(btnPassport) {
-      location.href="{% url 'admin_home' %}";
-    }
+    var csrftoken = '{{ csrf_token }}';
   </script>
+  <script src="{% static 'logic/routes.js' %}"></script>
+  <script src="{% static 'logic/auth/login.js' %}" type="text/javascript"></script>
+
 </body>
 </html>
