--- a/templates/auth/twofa.html
+++ b/templates/auth/twofa.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/pages/login-register.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
 
 </head>
 
@@ -41,18 +40,24 @@
                                     <h6 class="card-subtitle line-on-side text-muted text-center font-small-3 pt-2">
                                         <span>Enter Code to login</span>
                                     </h6>
+                                    <div class="alert alert-icon-left alert-info alert-dismissible mb-2" role="alert" id="notify" style="display: none;">
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                        <strong id="heading"></strong> <span id="msg"></span>
+                                    </div>
                                 </div>
                                 <div class="card-content">
 
                                     <div class="card-body pt-0">
-                                        <form class="form-horizontal">
+                                        <form class="form-horizontal" id="final_login" novalidate>
                                             <fieldset class="form-group floating-label-form-group">
                                                 <label for="user-name">Code</label>
-                                                <input type="text" class="form-control" id="user-name"
+                                                <input type="text" class="form-control" id="auth_code"
                                                     placeholder="Code">
                                             </fieldset>
-                                            <input type="text" value="{{remember_me}}" readonly  id="remember-me">
-                                            <button type="submit" class="btn btn-outline-primary btn-block"><i
+                                            <input type="text" value="{{remember_me}}" readonly hidden id="remember-me">
+                                            <button type="submit" id="proceed" class="btn btn-outline-primary btn-block"><i
                                                     class="ft-unlock"></i> Proceed</button>
                                         </form>
                                     </div>
@@ -68,8 +73,13 @@
     <script src="{% static 'vendors/js/forms/icheck/icheck.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/core/app-menu.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/core/app.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/customizer.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/form-login-register.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/forms/validation/jqBootstrapValidation.js' %}" type="text/javascript"></script>
+    <script>
+        var csrftoken = '{{ csrf_token }}';
+    </script>
+    <script src="{% static 'logic/routes.js' %}"></script>
+    <script src="{% static 'logic/auth/login.js' %}" type="text/javascript"></script>
 </body>
 
 </html>
