Pip installed slippers

--- a/templates/auth/twofa.html
+++ b/templates/auth/twofa.html
@@ -38,7 +38,7 @@
                                         </div>
                                     </div>
                                     <h6 class="card-subtitle line-on-side text-muted text-center font-small-3 pt-2">
-                                        <span>Enter Code to login</span>
+                                        <span>Code sent to your account email</span>
                                     </h6>
                                     <div class="alert alert-icon-left alert-info alert-dismissible mb-2" role="alert" id="notify" style="display: none;">
                                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
