--- a/templates/_base.html
+++ b/templates/_base.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/weather-icons/climacons.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
+
+   
+    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/toggle/switchery.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/switch.css' %}">
 </head>
 
 <body class="vertical-layout vertical-menu 2-columns   menu-expanded fixed-navbar" data-open="click"
@@ -51,7 +55,7 @@
                                 <span class="avatar avatar-online">
                                     <img src="{% static 'images/portrait/small/avatar-s-1.png' %}"
                                         alt="avatar"><i></i></span>
-                                <span class="user-name">John Doe</span>
+                                <span class="user-name">{{ user.username }}</span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item"
                                     href="user-profile.html"><i class="ft-user"></i> Edit Profile</a>
@@ -99,5 +103,12 @@
     <script src="{% static 'js/core/app.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/customizer.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/pages/dashboard-analytics.js' %}" type="text/javascript"></script>
+
+    <script src="{% static 'vendors/js/forms/toggle/bootstrap-checkbox.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/forms/toggle/switchery.min.js' %}" type="text/javascript"></script>
+
+
+    <script src="{% static 'js/scripts/forms/switch.js' %}" type="text/javascript"></script>
+
 </body>
 </html>
