--- a/templates/systemadmin/components/sidenav.html
+++ b/templates/systemadmin/components/sidenav.html
@@ -21,7 +21,6 @@
                 <span>Others</span><i class=" ft-minus" data-toggle="tooltip" data-placement="right"
                     data-original-title="Others"></i>
             </li>
-
             <li class=" nav-item"><a href="changelog.html"><i class="ft-file"></i><span class="menu-title"
                         data-i18n="">Changelog</span></a>
             </li>
@@ -34,6 +33,12 @@
             <li class=" nav-item">
                 <a href="http://wordpressbusiness.top/admin02/documentation/index.html"><i class="ft-folder"></i>
                     <span class="menu-title" data-i18n="">Documentation</span>
+                </a>
+            </li>
+
+            <li class=" nav-item">
+                <a href="{% url 'admin_settings' %}"><i class="ft-settings"></i>
+                    <span class="menu-title" data-i18n="">Settings</span>
                 </a>
             </li>
         </ul>
