--- a/templates/systemadmin/pages/index.html
+++ b/templates/systemadmin/pages/index.html
@@ -1,5 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
+{% load slippers %}
 {% block contents %}
     <div class="app-content content">
         <div class="content-wrapper">
@@ -8,89 +9,18 @@
             <div class="content-body">
                 <div class="row">
                     <div class="col-xl-3 col-lg-6 col-12">
-                        <div class="card">
-                            <div class="card-content">
-                                <div class="card-body">
-                                    <div class="media">
-                                        <div class="media-body text-left w-100">
-                                            <h3 class="primary">78%</h3>
-                                            <span>New Session</span>
-                                        </div>
-                                        <div class="media-right media-middle">
-                                            <i class="icon-user-follow primary font-large-2 float-right"></i>
-                                        </div>
-                                    </div>
-                                    <div class="progress progress-sm mt-1 mb-0">
-                                        <div class="progress-bar bg-primary" role="progressbar" style="width: 80%"
-                                            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% small_Card icon="icon-globe" icon_color="warning" value_color="warning" title="License Expires" value="31.12.2023" %}
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12">
-                        <div class="card">
-                            <div class="card-content">
-                                <div class="card-body">
-                                    <div class="media">
-                                        <div class="media-body text-left w-100">
-                                            <h3 class="danger">423</h3>
-                                            <span>Total Visits</span>
-                                        </div>
-                                        <div class="media-right media-middle">
-                                            <i class="icon-social-dropbox danger font-large-2 float-right"></i>
-                                        </div>
-                                    </div>
-                                    <div class="progress progress-sm mt-1 mb-0">
-                                        <div class="progress-bar bg-danger" role="progressbar" style="width: 40%"
-                                            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% small_Card icon="icon-user-follow" icon_color="danger" value_color="danger" title="Deactivated Accounts" value="12" %}
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12">
-                        <div class="card">
-                            <div class="card-content">
-                                <div class="card-body">
-                                    <div class="media">
-                                        <div class="media-body text-left w-100">
-                                            <h3 class="success">64.89 %</h3>
-                                            <span>Bounce Rate</span>
-                                        </div>
-                                        <div class="media-right media-middle">
-                                            <i class="icon-layers success font-large-2 float-right"></i>
-                                        </div>
-                                    </div>
-                                    <div class="progress progress-sm mt-1 mb-0">
-                                        <div class="progress-bar bg-success" role="progressbar" style="width: 60%"
-                                            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% small_Card icon="icon-social-dropbox" icon_color="primary" value_color="primary" title="Deactivated Accounts" value="12" %}
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12">
-                        <div class="card">
-                            <div class="card-content">
-                                <div class="card-body">
-                                    <div class="media">
-                                        <div class="media-body text-left w-100">
-                                            <h3 class="warning">02.12</h3>
-                                            <span>Session Duration</span>
-                                        </div>
-                                        <div class="media-right media-middle">
-                                            <i class="icon-globe warning font-large-2 float-right"></i>
-                                        </div>
-                                    </div>
-                                    <div class="progress progress-sm mt-1 mb-0">
-                                        <div class="progress-bar bg-warning" role="progressbar" style="width: 35%"
-                                            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% small_Card icon="icon-layers" icon_color="success" value_color="success" title="Deactivated Accounts" value="12" %}
                     </div>
+
                 </div>
             </div>
         </div>
