--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,6 +19,49 @@
    
     <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/toggle/switchery.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/switch.css' %}">
+    <style>
+:root {
+  --loading-grey: #ededed;
+}
+
+
+
+
+
+.loading .image,
+.loading h42, .skeleton,
+.loading .description {
+  background-color: var(--loading-grey);
+  color: var(--loading-grey);
+  background: linear-gradient(
+    100deg,
+    rgba(255, 255, 255, 0) 40%,
+    rgba(255, 255, 255, .5) 50%,
+    rgba(255, 255, 255, 0) 60%
+  ) var(--loading-grey);
+  background-size: 200% 100%;
+  background-position-x: 180%;
+  animation: 1s loading ease-in-out infinite;
+}
+
+@keyframes loading {
+  to {
+    background-position-x: -20%;
+  }
+}
+
+.loading h42 {
+  min-height: 1.6rem;
+  border-radius: 4px;
+  animation-delay: .06s;
+}
+
+.loading .description {
+  
+  border-radius: 4px;
+  animation-delay: .06s;
+}
+    </style>
 </head>
 
 <body class="vertical-layout vertical-menu 2-columns   menu-expanded fixed-navbar" data-open="click"
@@ -86,6 +129,10 @@
             <span class="float-md-right d-block d-md-inline-block d-none d-lg-block">Chikolo | Kodkon</span>
         </p>
     </footer>
+    <script>
+        var csrftoken = '{{ csrf_token }}';
+    </script>
+    <script src="{% static 'logic/routes.js' %}"></script>
     <script src="{% static 'vendors/js/vendors.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'vendors/js/extensions/jquery.knob.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/extensions/knob.js' %}" type="text/javascript"></script>
@@ -102,13 +149,11 @@
     <script src="{% static 'js/core/app-menu.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/core/app.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/customizer.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/pages/dashboard-analytics.js' %}" type="text/javascript"></script>
-
+    {% comment %} <script src="{% static 'js/scripts/pages/dashboard-analytics.js' %}" type="text/javascript"></script> {% endcomment %}
     <script src="{% static 'vendors/js/forms/toggle/bootstrap-checkbox.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'vendors/js/forms/toggle/switchery.min.js' %}" type="text/javascript"></script>
-
-
     <script src="{% static 'js/scripts/forms/switch.js' %}" type="text/javascript"></script>
-
+    {% block page_scripts %}
+    {% endblock %}
 </body>
 </html>
