--- a/templates/public/settings.html
+++ b/templates/public/settings.html
@@ -8,17 +8,18 @@
         <div class="content-body">
             <div class="row">
                 <div class="col-xl-3 col-lg-6 col-12">
-                    <div class="card">
+                    <div class="card" id="two_fa_card">
                         <div class="card-header">
                             <h4 class="card-title">2FA Settings</h4>
                         </div>
-                        <div class="card-content">
-                            <div class="card-body">
+                        <div class="card-content ">
+                            <div class="card-body ">
                                 <fieldset>
-                                    <div class="float-left">
-                                        <input type="checkbox" class="switch" id="switch6" data-group-cls="btn-group-sm" data-off-label="Off" data-on-label="On" data-icon-cls="fa" data-off-icon-cls="ft-alert-triangle" data-on-icon-cls="ft-check"/>
+                                    <div class="float-left" id="checker">
+                                        <input type="checkbox" class="switch" id="two_fa" data-group-cls="btn-group-sm" data-off-label="Off" data-on-label="On" data-icon-cls="fa" data-off-icon-cls="ft-alert-triangle" data-on-icon-cls="ft-check" onchange="change()"/>
                                     </div>
                                 </fieldset>
+                                
                             </div>
                         </div>
                     </div>
@@ -27,4 +28,20 @@
         </div>
     </div>
 </div>
+{% endblock %}
+{% block page_scripts %}
+    <script src="{% static 'logic/get_set.js' %}" type="text/javascript"></script>
+    <script>
+    //    $(document).ready(function () {
+    //        $("#two_fa_card").removeClass("loading");
+    //        setTimeout(function () {
+    //            const checker = document.getElementById('checker')
+    //            const holder = document.getElementById('holder')
+    //             checker.style.display = "block";
+    //             holder.style.display = "none";
+    //         }, 1200);
+
+    //     });
+
+    </script>
 {% endblock %}
