Created staff model

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/switch.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/extensions/toastr.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/extensions/toastr.css' %}">
+    {% block page_css %}
+    
+    {% endblock %}
 </head>
 
 <body class="vertical-layout vertical-menu 2-columns   menu-expanded fixed-navbar" data-open="click"
