--- a/templates/systemadmin/pages/departments.html
+++ b/templates/systemadmin/pages/departments.html
@@ -1,5 +1,10 @@
 {% extends '_base.html' %}
 {% load static %}
+{% block page_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'vendors/css/tables/datatable/datatables.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'vendors/css/tables/extensions/buttons.dataTables.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'vendors/css/tables/datatable/buttons.bootstrap4.min.css' %}">
+{% endblock %}
 {% block contents %}
 <div class="app-content content">
     <div class="content-wrapper">
@@ -35,6 +40,54 @@
                     </div>
                 </div>
                 <div class="col-xl-9 col-lg-6 col-12">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">HTML5 export buttons</h4>
+                    <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a>
+                    <div class="heading-elements">
+                        <ul class="list-inline mb-0">
+                            <li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-content collapse show">
+                    <div class="card-body card-dashboard">
+                        <table class="table table-striped table-bordered dataex-html5-export">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Created By</th>
+                                    <th>Date Created</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for department in depts %}
+                                    <tr>
+                                        <td>{{department.department}}</td>
+                                        <td>{{department.created_by.id}}</td>
+                                        <!-- <td>{{department.created_by.firstname}} {{province.created_by.lastname}}</td> -->
+                                        <td>{{department.created_at}}</td>
+                                        <td>
+                                            <a href="{{department.get_absolute_url}}"><i class="fa fa-eye"></i></a>
+                                    
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Created By</th>
+                                    <th>Date Created</th>
+                                    <th>Action</th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
                 </div>
 
             </div>
@@ -46,4 +99,33 @@
 
 {% block page_scripts %}
     <script src="{% static 'logic/admin/department.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/tables/datatable/datatables.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/tables/datatable/dataTables.buttons.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/tables/datatable/buttons.bootstrap4.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/tables/jszip.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/tables/pdfmake.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/tables/vfs_fonts.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/tables/buttons.html5.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/tables/buttons.print.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/tables/buttons.colVis.min.js' %}" type="text/javascript"></script>
+    <script>
+        $('.dataex-html5-export').DataTable({
+            dom: 'Bfrtip',
+            "order": [],
+            buttons: [
+                {
+                    extend: 'excelHtml5',
+                    exportOptions: {
+                        columns: [0, 1]
+                    }
+                },
+                {
+                    extend: 'pdfHtml5',
+                    exportOptions: {
+                        columns: [0, 1]
+                    }
+                },
+            ]
+        });
+    </script>
 {% endblock %}
