Create department done, also added functions that retrieves users profile ID in permissions.py and full user names in authentication model

--- a/templates/systemadmin/pages/departments.html
+++ b/templates/systemadmin/pages/departments.html
@@ -65,7 +65,7 @@
                                 {% for department in depts %}
                                     <tr>
                                         <td>{{department.department}}</td>
-                                        <td>{{department.created_by.id}}</td>
+                                        <td>{{department.created_by.firstname}} {{department.created_by.lastname}}</td>
                                         <!-- <td>{{department.created_by.firstname}} {{province.created_by.lastname}}</td> -->
                                         <td>{{department.created_at}}</td>
                                         <td>
