--- a/templates/_base.html
+++ b/templates/_base.html
@@ -58,7 +58,7 @@
                                 <span class="avatar avatar-online">
                                     <img src="{% static 'images/portrait/small/avatar-s-1.png' %}"
                                         alt="avatar"><i></i></span>
-                                <span class="user-name">{{ user.username }}</span>
+                                <span class="user-name">{{ user.get_staff_names }}</span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item"
                                     href="user-profile.html"><i class="ft-user"></i> Edit Profile</a>
