Next URL for 2FA setup

--- a/templates/auth/twofa.html
+++ b/templates/auth/twofa.html
@@ -57,6 +57,7 @@
                                                     placeholder="Code">
                                             </fieldset>
                                             <input type="text" value="{{remember_me}}" readonly hidden id="remember-me">
+                                            <input type="text" value="{{next_url}}" readonly hidden id="next">
                                             <button type="submit" id="proceed" class="btn btn-outline-primary btn-block"><i
                                                     class="ft-unlock"></i> Proceed</button>
                                         </form>
