--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/switch.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/extensions/toastr.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/extensions/toastr.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/extensions/sweetalert.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}"">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/checkboxes-radios.css' %}"">
     {% block page_css %}
     
     {% endblock %}
@@ -105,6 +108,8 @@
     <script src="{% static 'vendors/js/forms/toggle/bootstrap-checkbox.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/switch.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/validation/form-validation.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/extensions/sweetalert.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/scripts/forms/checkbox-radio.js' %}" type="text/javascript"></script>
     
     {% block page_scripts %}
     {% endblock %}
