--- a/templates/emailTemplates/2fa.html
+++ b/templates/emailTemplates/2fa.html
@@ -34,7 +34,7 @@
                                     <td style="padding:0 35px;">
                                         <h1
                                             style="color:#1e1e2d; font-weight:500; margin:0;font-size:25px;font-family:'Rubik',sans-serif;">
-                                            Hi {{ name }}, you started you login process</h1>
+                                            Hi {{ name }}, your started you login process</h1>
                                         <p style="font-size:21px;">Your access code is <b>{{code}}</b>.</p>
                                         <span style="display:inline-block; vertical-align:middle; margin:15px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
                                         <p style="color:#DE5617; font-size:15px;line-height:24px; margin:0;">
