--- a/templates/systemadmin/pages/createStaff.html
+++ b/templates/systemadmin/pages/createStaff.html
@@ -71,23 +71,15 @@
                                     </div>
                                     <h4 class="form-section"><i class="ft-shield"></i> Account Info</h4>
                                     <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label for="projectinput1">Department<span style="font-size: small;" class="danger">*</span></label>
-                                                <select class="form-control" name="department" id="department" required>
-                                                    <option value="">Select Option</option>
-                                                    {% for department in departments %}
-                                                        <option value="{{department.public_key}}">{{department.department}}</option>
-                                                    {% endfor %}
-                                                </select>
-                                            </div>
-                                        </div>
+                                        
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput1">User Role<span style="font-size: small;" class="danger">*</span></label>
                                                 <select class="form-control" name="role" id="role" required>
                                                     <option value="">Select Option</option>
-                                                    <option value="System Admin">System Admin</option>
+                                                    {% for role in user_roles %}
+                                                    <option value="{{role.0}}">{{role.0}}</option>
+                                                    {% endfor %}
                                                 </select>
                                             </div>
                                         </div>
