Updated admin home page cards

--- a/templates/systemadmin/pages/index.html
+++ b/templates/systemadmin/pages/index.html
@@ -9,16 +9,16 @@
             <div class="content-body">
                 <div class="row">
                     <div class="col-xl-3 col-lg-6 col-12">
-                        {% small_Card icon="icon-globe" icon_color="warning" value_color="warning" title="License Expires" value="31.12.2023" %}
+                        {% small_Card icon="icon-globe" icon_color="warning" value_color="warning" title="Settlements" value="223" %}
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12">
-                        {% small_Card icon="icon-user-follow" icon_color="danger" value_color="danger" title="Deactivated Accounts" value="12" %}
+                        {% small_Card icon="icon-user" icon_color="danger" value_color="danger" title="House Heads" value="12" %}
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12">
-                        {% small_Card icon="icon-social-dropbox" icon_color="primary" value_color="primary" title="Deactivated Accounts" value="12" %}
+                        {% small_Card icon="icon-users" icon_color="primary" value_color="primary" title="Total Head Count" value="1220" %}
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12">
-                        {% small_Card icon="icon-layers" icon_color="success" value_color="success" title="Deactivated Accounts" value="12" %}
+                        {% small_Card icon="icon-layers" icon_color="success" value_color="success" title="Harvested Fields" value="12" %}
                     </div>
 
                 </div>
