--- a/templates/systemadmin/components/sidenav.html
+++ b/templates/systemadmin/components/sidenav.html
@@ -11,7 +11,8 @@
                 <ul class="menu-content">
                     <li class="{% if is_makeStaff %} active {% endif %}"><a class="menu-item" href="{% url 'admin_make_staff' %}">Create</a>
                     </li>
-                    
+                    <li class="{% if is_listStaff %} active {% endif %}"><a class="menu-item" href="{% url 'admin_list_staff' %}">View</a>
+                    </li>
                 </ul>
             </li>
 
